# ytdl-sub-status

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  background.js  cliff.toml  content.js  justfile  manifest.json  pyproject.toml
docs/: amo-listing.md  api.md  architecture.md  signing.md
options/: options.html  options.js
popup/: popup.css  popup.html  popup.js
scripts/: build.py  changelog.py
tests/: test_manifest_and_sources.py
